# snis-analysis-2021

./: .gitignore  0_0_download.ipynb  1_0_prepare.ipynb  1_1_populacao_atendida.ipynb  1_1_tarifas.ipynb  1_1_tariffs.ipynb  1_2_clustering.ipynb  2_0_make_boxplot.ipynb  2_0_make_timeseries_plots.ipynb  2_1_make_maps.ipynb  LICENSE.txt  README.md  pyproject.toml
