[tool.poetry]
name = "snis-analysis-2021"
version = "0.1.0"
description = "SNIS data analysis"
authors = ["Daniel Komesu <danielkomesu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "snis_analysis_2021"}]

[tool.poetry.dependencies]
python = "^3.11"
statsmodels = "*"
seaborn = "*"
requests = "*"
sidrapy = "*"
tslearn = "*"
geopandas = "*"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
